# rust-rdbms

./: .gitignore  Cargo.toml  README.md  simple.rly  table.rly
examples/: btree-all.rs  btree-create.rs  btree-query.rs  simple-table-all.rs  simple-table-exact.rs  simple-table-plan.rs  simple-table-range.rs  simple-table-scan.rs  table-create.rs  table-index.rs  table-large.rs
src/: buffer.rs  disk.rs  lib.rs  main.rs  memcmpable.rs  query.rs  slotted.rs  table.rs  tuple.rs
src/btree/: branch.rs  leaf.rs  node.rs
