[package]
name = "rust-rdbms"
version = "0.1.0"
authors = ["Naoki Kishi <naokikishi.kyoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
zerocopy = "0.3"
bincode = "1.3"